force-app/main/default/objects/Study_Unit_Requirement__c/Study_Unit_Requirement__c.object-meta.xml
<CustomObject>
    <description>The default requirement for a unit of study.</description>
    <label>Study Unit Requirement</label>
    <nameField>
        <label>Study Unit Requirement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Study Unit Requirements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>