force-app/main/default/objects/Study_Unit_Requirement__c/fields/Field_Matching_Operator__c.field-meta.xml
<CustomField>
    <fullName>Field_Matching_Operator__c</fullName>
    <label>Field Matching Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Field_Matching_Operator</valueSetName>
    </valueSet>
</CustomField>