force-app/main/default/objects/Study_Unit_Requirement__c/fields/Study_Unit__c.field-meta.xml
<CustomField>
    <fullName>Study_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Study Unit</label>
    <referenceTo>Study_Unit__c</referenceTo>
    <relationshipLabel>Study Unit Requirements</relationshipLabel>
    <relationshipName>Study_Unit_Requirements</relationshipName>
    <type>Lookup</type>
</CustomField>